--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/styled-engine-sc": "^6.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
