--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.1.5",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "stylis": "^4.3.5",
+    "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
