--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.14",
     "stylis": "^4.3.5",
     "stylis-plugin-rtl": "^2.1.1",
